--- a/plugins/fantribe-theme/assets/stylesheets/common/components/right-sidebar.scss
+++ b/plugins/fantribe-theme/assets/stylesheets/common/components/right-sidebar.scss
@@ -18,7 +18,7 @@ body.fantribe-theme:not(.admin-interface) {
       width: 320px;
       height: 100%;
       overflow-y: auto;
-      padding-bottom: 80px;
+      padding: 24px 0;
 
       &::-webkit-scrollbar {
         display: none;
